Fix font weight for the header of the working groups on mobile

--- a/sass/_working-groups.scss
+++ b/sass/_working-groups.scss
@@ -1,6 +1,6 @@
 .working-group-content {
     font-size: 1.25rem;
-    font-weight: lighter;
+    font-weight: 400;
     line-height: 1.5;
 }
 
